@@ -829,6 +829,13 @@
         <regenerate/>
         <download/>
       </component>
+      <component name="gimp-gap" dir="gimp-gap" group="extras">
+        <podir dir="po"/>
+        <potname name="gimp14-gap.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
       <component name="gimp" dir="gimp" group="extras">
         <podir dir="po"/>
         <potname name="gimp14.pot"/>
