@@ -1,3 +1,7 @@
+2003-06-30  Abel Cheung  <maddog@linux.org.hk>
+
+	* translation-status.xml: Add gimp-gap.
+
 2003-06-28  Abel Cheung  <maddog@linux.org.hk>
 
 	* translation-status.xml: Remove libglade, which has no translatable
